<resources>
    <string name="app_name">Notes</string>

    <string name="placeholder_short">Hello world!</string>
    <string name="placeholder_medium">Hello world! This is the best noting app on Earth!</string>
    <string name="placeholder_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum rhoncus nunc, a euismod elit pretium et. Aenean vehicula risus vel nisi. </string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="all_notes_label">All notes</string>
    <string name="starred_label">Starred</string>
    <string name="bin_label">Bin</string>
    <string name="authentication_label">Authentication</string>
    <string name="navigation_item_explore_title">Explore</string>
    <string name="navigation_item_settings_title">Settings</string>
    <string name="private_label">Private</string>

    <string name="title_activity_explore">Explore</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_compose_note">Compose note</string>
    <string name="title_activity_compose_list">Compose list</string>
    <string name="title_activity_display_note">Display note</string>
    <string name="title_activity_display_list">Display list</string>

    <string name="reminder_clock_icon_desc">Reminder clock icon.</string>
    <string name="title_image_button_desc">Touch icon not licensed!</string>
    <string name="note_image_view_desc">Attached image to note.</string>

    <string name="hello_world">Hello world!</string>
    <string name="item_added_to_done_snackbar_message">Item added to done</string>
    <string name="note_deleted_snackbar_message">Note deleted</string>
    <string name="snackbar_action_undo">UNDO</string>
    <string name="list_item_removed_snackbar_message">Item removed</string>
    <string name="attached_image_desc">Note attached image.</string>
    <string name="compose_note_title_hint">Title</string>
    <string name="compose_note_description_hint">Note</string>
    <string name="compose_note_set_reminder_text">Set reminder</string>
    <string name="empty_bin_dialog_title">Empty bin?</string>
    <string name="empty_bin_dialog_content">All notes in Bin will be permanently deleted.</string>
    <string name="empty_bin_dialog_agree">Empty Bin</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="delete_note_permanently_dialog_title">Delete note forever?</string>
    <string name="delete_note_permanently_dialog_agree">Delete</string>
    <string name="compose_lise_add_text_view_text">List item</string>

    <string name="compose_list_done_tasks_caption">Done</string>
    <string name="compose_list_todo_tasks_caption">Todo</string>
    <string name="star_button_content_description">Star button</string>
    <string name="more_image_view_content_desc">There is more to show image view.</string>
    <string name="restore_note_dialog_title">Restore note?</string>
    <string name="restore_note_dialog_content">Note will restore its previous state.</string>
    <string name="restore_note_dialog_agree">Restore</string>
    <string name="remove_list_input_item_image_desc">Remove list input item</string>
    <string name="list_input_item_move_image_desc">Move list input items</string>
    <string name="add_picture_dialog_title">Add image:</string>
    <string name="add_picture_dialog_take_photo">Take photo</string>
    <string name="add_picture_dialog_choose_image">Choose image</string>
    <string name="note_attached_image_desc">Note attached image</string>
    <string name="delete_image_button_desc">Delete image icon</string>
    <string name="remove_photo_dialog_title">Remove image?</string>
    <string name="remove_photo_dialog_positive_text">Remove</string>
    <string name="speech_prompt">Speak now</string>
    <string name="speech_not_supported">Speech recognition not supported on your device.</string>
    <string name="play_pause_image_button_desc">Play/pause record button</string>
    <string name="delete_audio_image_button_desc">Delete audio button</string>
    <string name="delete_audio_from_note_dialog_title">Delete audio?</string>
    <string name="delete_audio_from_note_dialog_content">Voice record will be deleted permanently.</string>
    <string name="delete_audio_from_note_dialog_positive_text">Delete permanently</string>
    <string name="open_image_progress_dialog_title">Opening image</string>
    <string name="open_image_progress_dialog_content">Opening image with default gallery app.</string>


    <string name="display_reminder_text_and_date">Reminder: %s</string>
    <string name="location_button_decode_text">decoding</string>
    <string name="display_map_intent_label">Note creation location</string>
    <string name="display_creation_date">Created on: %s</string>
    <string name="display_last_modified_date">Last modified: %s</string>
    <string name="display_expiration_date">Expires on: %s</string>

    <string name="note">"Note "</string>
    <string name="list">"List "</string>

    <string name="fab_label_note">Text note</string>
    <string name="fab_label_list">To-do list</string>
    <string name="fab_label_voice">Speech to text</string>
    <string name="fab_label_camera">Attach image</string>

    <string name="encrypt_progress_dialog_title">Encrypting note</string>
    <string name="encrypt_progress_dialog_content">Encrypting note with AES algorithm</string>
    <string name="decrypt_progress_dialog_title">Decrypting note</string>
    <string name="decrypt_progress_dialog_content">Please wait a moment</string>
    <string name="decrypt_all_notes_progress_dialog_title">Decrypting notes</string>


    <string name="unlock_note_dialog_title">Unlock note?</string>
    <string name="unlock_note_dialog_content">Unlocking note will make it normal and move it to all notes.</string>
    <string name="unlock_note_dialog_positive_text">Unlock</string>
    <string name="lock_note_dialog_title">Lock note?</string>
    <string name="lock_note_dialog_content">Locking will encrypt the note and move it to private.</string>
    <string name="lock_dialog_positive_text">Lock</string>

    <string name="delete_normal_note_dialog_title">Delete note?</string>
    <string name="delete_normal_note_dialog_content">Deleting note will send it to Bin.</string>
    <string name="delete_normal_note_dialog_positive_text">Delete</string>
    <string name="delete_private_note_dialog_title">Delete note permanently?</string>
    <string name="delete_private_note_dialog_content">Private notes are NOT sent to bin. They are deleted forever!</string>
    <string name="delete_private_note_dialog_positive_text">Delete forever</string>

    <string name="note_moved_to_all_notes">Note moved to \"all notes\".</string>
    <string name="note_moved_to_private">Note moved to \"Private\".</string>
    <string name="note_moved_to_bin">Note moved to \"Bin\".</string>
    <string name="note_deleted_permanently">Note deleted permanently.</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="action_edit">Edit</string>
    <string name="action_unlock_note">Unlock note</string>
    <string name="action_lock_note">Lock note</string>
    <string name="action_delete_note">Delete</string>

    <string name="action_add_image">Add image</string>

    <string name="action_empty_bin">Empty bin</string>
    <string name="action_delete_forever">Delete note forever</string>
    <string name="action_restore_deleted">Restore note</string>
    <string name="private_note_deleted_due_to_wrong_pass">Private note deleted due to security actions.</string>

    <string name="all_notes_empty_view_text">There are no notes, yet :/\nTap the floating button to fix it!</string>
    <string name="starred_empty_view_text">There no notes with star, yet :/</string>
    <string name="private_empty_view_text">There no private notes, yet :/</string>
    <string name="bin_empty_view_text">Hurray! Bin is empty :)</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="display_details_location_icon_desc">Location</string>
    <string name="main_item_audio_icon_desc">Note has audio icon</string>
    <string name="ok">OK</string>
    <string name="write_external_permission_rationale">Notes needs access to picture\'s folder to show images.</string>
    <string name="record_audio_permission_rationale">Notes needs permission to record audio for Text-to-Speech feature.</string>


</resources>
