<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/note_item_card_view"
    style="@style/MyCardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/note_content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="7dp">

        <include
            android:id="@+id/note_title_text_view"
            layout="@layout/note_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/note_item_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:contentDescription="@string/note_image_view_desc"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:src="@drawable/ic_description_black_24dp" />

        <TextView
            android:id="@+id/note_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:description="@string/placeholder_long"
            android:maxLines="13" />

        <ImageView
            android:id="@+id/note_more_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/more_image_view_content_desc"
            android:src="@drawable/ic_more_horiz_black_24dp"
            android:visibility="gone" />

        <include
            android:id="@+id/note_attributes_layout"
            layout="@layout/note_attributes_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</android.support.v7.widget.CardView>