<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gcode.notes.activities.MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/main_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/MyToolbarTheme"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/Theme.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/main_content_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="@dimen/main_horizontal_key_line_1"
            android:layout_marginLeft="@dimen/main_horizontal_key_line_1"
            android:layout_marginRight="@dimen/main_horizontal_key_line_1"
            android:layout_marginStart="@dimen/main_horizontal_key_line_1"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <TextView
            android:id="@+id/main_notes_recycler_view_empty_text_view"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="There are no notes :/"
            android:visibility="gone" />

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fab_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|end"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:menu_backgroundColor="@color/fab_menu_background"
            app:menu_colorNormal="@color/color_accent_pink"
            app:menu_colorPressed="@color/color_accent_pink_dark"
            app:menu_fab_size="normal"
            app:menu_labels_colorNormal="@color/fab_menu_labels_color_normal"
            app:menu_labels_colorPressed="@color/fab_menu_labels_color_pressed"
            app:menu_labels_ellipsize="end"
            app:menu_labels_position="left"
            app:menu_labels_singleLine="true"
            app:menu_labels_textColor="#212121">

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fabMenuItemClicked"
                android:src="@drawable/ic_photo_camera_white_24dp"
                android:tag="@string/fab_label_camera"
                app:fab_colorNormal="@color/color_accent_pink"
                app:fab_colorPressed="@color/color_accent_pink_dark"
                app:fab_label="@string/fab_label_camera"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fabMenuItemClicked"
                android:src="@drawable/ic_keyboard_voice_white_24dp"
                android:tag="@string/fab_label_voice"
                app:fab_colorNormal="@color/color_accent_pink"
                app:fab_colorPressed="@color/color_accent_pink_dark"
                app:fab_label="@string/fab_label_voice"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fabMenuItemClicked"
                android:src="@drawable/ic_list_white_24dp"
                android:tag="@string/fab_label_list"
                app:fab_colorNormal="@color/color_accent_pink"
                app:fab_colorPressed="@color/color_accent_pink_dark"
                app:fab_label="@string/fab_label_list"
                app:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fabMenuItemClicked"
                android:src="@drawable/ic_note_add_white_24dp"
                android:tag="@string/fab_label_note"
                app:fab_colorNormal="@color/color_accent_pink"
                app:fab_colorPressed="@color/color_accent_pink_dark"
                app:fab_label="@string/fab_label_note"
                app:fab_size="mini" />
        </com.github.clans.fab.FloatingActionMenu>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_navigation_drawer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_drawer_header"
        app:menu="@menu/menu_drawer" />
</android.support.v4.widget.DrawerLayout>
